--- a/app.nw/package.json
+++ b/app.nw/package.json
@@ -43,12 +43,13 @@
     "butter-provider": "0.6.0",
     "butter-provider-anime": "1.0.0",
     "butter-provider-movies": "1.0.3",
+    "butter-provider-yts": "0.1.0",
     "butter-provider-tvapi": "git+https://github.com/team-pct/butter-provider-tvapi",
     "butter-provider-vodo": "0.3.1",
     "butter-settings-popcorntime.io": "git+https://github.com/popcorn-official/butter-settings-popcorn",
     "chromecasts": "1.9.0",
     "defer-request": "0.0.2",
-    "dlnacasts": "0.1.0",
+    "dlnacasts2": "0.1.2",
     "gitlab": "1.4.1",
     "i18n": "0.x.x",
     "iconv-lite": "0.x.x",
@@ -62,7 +63,7 @@
     "nedb": "1.8.0",
     "node-captions": "0.4.6",
     "node-webkit-fdialogs": "latest",
-    "opensubtitles-api": "4.0.0",
+    "opensubtitles-api": "4.1.0",
     "os-name": "2.0.1",
     "popcorn-txt-api": "git+https://github.com/hackhackhack/popcorn-txt-api",
     "q": "2.0.3",
